// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game should render 1`] = `
<div
  className="game"
>
  <Board
    onClick={[Function]}
    squares={
      Array [
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
      ]
    }
  />
  <Component
    moves={Array []}
    status=""
  />
</div>
`;

exports[`Game should set X on clicked move 1`] = `
<div
  className="game"
>
  <Board
    onClick={[Function]}
    squares={
      Array [
        "",
        "",
        "",
        "X",
        "",
        "",
        "",
        "",
        "",
      ]
    }
  />
  <Component
    moves={Array []}
    status=""
  />
</div>
`;
